--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
 openai==0.27.2
+pydub==0.25.1
 pymongo==4.3.3
 pyTelegramBotAPI==4.10.0
 python-dotenv==1.0.0
