--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,34 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
 dnspython==2.3.0
 frozenlist==1.3.3
+google-api-core==2.11.0
+google-auth==2.17.0
+googleapis-common-protos==1.59.0
+grpcio==1.53.0
+grpcio-status==1.53.0
 idna==3.4
 multidict==6.0.4
 openai==0.27.2
+proto-plus==1.22.2
+protobuf==4.22.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pydub==0.25.1
 pymongo==4.3.3
 pyTelegramBotAPI==4.10.0
 python-dotenv==1.0.0
+pytube==12.1.3
 pytz==2023.2
 requests==2.28.2
+rsa==4.9
+six==1.16.0
 tqdm==4.65.0
 urllib3==1.26.15
 yarl==1.8.2
+ytmusicapi==0.25.1
